k8s-manifest/deployment-clientservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clientservice-deployment
  namespace: gestor-tareas
  labels:
    app: clientservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clientservice
  template:
    metadata:
      labels:
        app: clientservice
    spec:
      containers:
      - name: clientservice
        image: estigma/clientservice:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
