k8s-manifest/deployment-db-tareas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-tareas-deployment
  namespace: gestor-tareas
  labels:
    app: db-tareas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-tareas
  template:
    metadata:
      labels:
        app: db-tareas
    spec:
      containers:
      - name: db-tareas
        image: mcr.microsoft.com/mssql/server:2022-latest
        ports:
        - containerPort: 1433
        volumeMounts:
        - name: db-tareas-storage
          mountPath: /var/opt/mssql
      volumes:
      - name: db-tareas-storage
        persistentVolumeClaim:
          claimName: db-tareas-data-pvc
