k8s-manifest/deployment-db-usuarios.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-usuarios-deployment
  namespace: gestor-tareas
  labels:
    app: db-usuarios
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-usuarios
  template:
    metadata:
      labels:
        app: db-usuarios
    spec:
      containers:
      - name: db-usuarios
        image: mcr.microsoft.com/mssql/server:2022-latest
        ports:
        - containerPort: 1433
        volumeMounts:
        - name: db-usuarios-storage
          mountPath: /var/opt/mssql
      volumes:
      - name: db-usuarios-storage
        persistentVolumeClaim:
          claimName: db-usuarios-data-pvc
