k8s-manifest/deployment-ftp-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ftp-server-deployment
  namespace: gestor-tareas
  labels:
    app: ftp-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ftp-server
  template:
    metadata:
      labels:
        app: ftp-server
    spec:
      containers:
      - name: ftp-server
        image: stilliard/pure-ftpd
        ports:
        - containerPort: 21
        volumeMounts:
        - name: ftp-storage
          mountPath: /home/ftpuser
      volumes:
      - name: ftp-storage
        persistentVolumeClaim:
          claimName: ftp-data-pvc
