k8s-manifest/deployment-jaeger.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger-deployment
  namespace: gestor-tareas
  labels:
    app: jaeger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaeger
  template:
    metadata:
      labels:
        app: jaeger
    spec:
      containers:
      - name: jaeger
        image: jaegertracing/all-in-one:latest
        ports:
        - containerPort: 16686
        - containerPort: 4317
        - containerPort: 4318
