k8s-manifest/deployment-taskservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskservice-deployment
  namespace: gestor-tareas
  labels:
    app: taskservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: taskservice
  template:
    metadata:
      labels:
        app: taskservice
    spec:
      containers:
      - name: taskservice
        image: estigma/taskservice:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "25m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "512Mi"
