k8s-manifest/service-clientservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: clientservice-service
  namespace: gestor-tareas
  labels:
    app: clientservice
spec:
  selector:
    app: clientservice
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
