k8s-manifest/service-db-tareas.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-tareas-service
  namespace: gestor-tareas
spec:
  selector:
    app: db-tareas
  ports:
  - protocol: TCP
    port: 1433
    targetPort: 1433
