k8s-manifest/service-db-usuarios.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-usuarios-service
  namespace: gestor-tareas
spec:
  selector:
    app: db-usuarios
  ports:
  - protocol: TCP
    port: 1433
    targetPort: 1433
