k8s-manifest/service-ftp-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: ftp-server-service
  namespace: gestor-tareas
spec:
  selector:
    app: ftp-server
  ports:
  - name: ftp-control
    protocol: TCP
    port: 21
    targetPort: 21
    nodePort: 30021
  - name: ftp-pasv-30000
    port: 30000
    targetPort: 30000
    nodePort: 30000
  - name: ftp-pasv-30001
    port: 30001
    targetPort: 30001
    nodePort: 30001
  - name: ftp-pasv-30002
    port: 30002
    targetPort: 30002
    nodePort: 30002
  - name: ftp-pasv-30003
    port: 30003
    targetPort: 30003
    nodePort: 30003
  - name: ftp-pasv-30004
    port: 30004
    targetPort: 30004
    nodePort: 30004
  - name: ftp-pasv-30005
    port: 30005
    targetPort: 30005
    nodePort: 30005
  - name: ftp-pasv-30006
    port: 30006
    targetPort: 30006
    nodePort: 30006
  - name: ftp-pasv-30007
    port: 30007
    targetPort: 30007
    nodePort: 30007
  - name: ftp-pasv-30008
    port: 30008
    targetPort: 30008
    nodePort: 30008
  - name: ftp-pasv-30009
    port: 30009
    targetPort: 30009
    nodePort: 30009  
  type: NodePort
