k8s-manifest/service-jaeger.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaeger-service
  namespace: gestor-tareas
spec:
  selector:
    app: jaeger
  ports:
  - name: ui
    protocol: TCP
    port: 16686
    targetPort: 16686
    nodePort: 30686
  - name: otlp-grpc
    protocol: TCP
    port: 4317
    targetPort: 4317
  - name: otlp-http
    protocol: TCP
    port: 4318
    targetPort: 4318
  type: NodePort
