k8s-manifest/service-rabbitmq.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
  namespace: gestor-tareas
spec:
  selector:
    app: rabbitmq
  ports:
  - name: amqp
    protocol: TCP
    port: 5672
    targetPort: 5672
  - name: management
    protocol: TCP
    port: 15672
    targetPort: 15672
    nodePort: 30672  
  type: NodePort
