k8s-manifest/service-taskservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: taskservice-service
  namespace: gestor-tareas
  labels:
    app: taskservice
spec:
  selector:
    app: taskservice
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
